force-app/src/objects/c2g__codaBatchControlDetail__c.object
<CustomObject>
    <description>Stores record information to avoid running in parallel more than one batch process for the same records.</description>
    <fields>
        <fullName>c2g__BatchControl__c</fullName>
        <label>Batch Lock</label>
        <referenceTo>c2g__codaBatchControl__c</referenceTo>
        <relationshipLabel>Batch Lock Details</relationshipLabel>
        <relationshipName>BatchControlDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__ObjectType__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RecordId__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Batch Lock Detail</label>
    <nameField>
        <displayFormat>BCD{000000}</displayFormat>
        <label>Batch Lock Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Lock Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>